[package]
name = "synthia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap-serde = { version = "0.5.1", features = ["yaml"] }
nom = "7.1.3"
serde = "1.0.189"
serde_yaml = "0.9.25"
