[package]
name = "synthia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
clap-serde = { version = "0.5.1", features = ["yaml"] }
env_logger = "0.10.0"
log = "0.4.20"
nom = "7.1.3"
serde = "1.0.189"
serde_yaml = "0.9.25"
